--- a/css/base.css
+++ b/css/base.css
@@ -119,6 +119,12 @@ h1 {
     display: none;
 }
 
+.tesseau-logo{
+    width: 24px;
+    height: 24px;
+    margin-right: 0.5em;
+}
+
 @media (max-width: 768px) {
 
     .navbar .nav-link#tesseau{
@@ -145,5 +151,9 @@ h1 {
     select{
         max-width: 100%;
         margin-top: 10px;
+    }
+
+    .tesseau-logo{
+        display:none;
     }
 }
