--- a/reminders/css/reminders.css
+++ b/reminders/css/reminders.css
@@ -111,6 +111,18 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
+.reminder-container h3 {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 4px;
+}
+
+.reminder-container h3:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .reminder-page-container {
   margin-top: 20px;
   margin-bottom: 20px;
